@@ -62,7 +62,7 @@ dnl
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
-#include <libart/art_uta.h>
+#include <libart_lgpl/libart.h>
 
 char*
 my_strdup (char *str)
@@ -136,7 +136,7 @@ int main ()
           LIBS="$LIBS $LIBART_LIBS"
           AC_TRY_LINK([
 #include <stdio.h>
-#include <libart.h>
+#include <libart_lgpl/libart.h>
 ],      [ return 0; ],
         [ echo "*** The test program compiled, but did not run. This usually means"
           echo "*** that the run-time linker is not finding LIBART or finding the wrong"
