@@ -1,5 +1,7 @@
 2000-01-10  Elliot Lee  <sopwith@redhat.com>
 
+	* Makefile.am, *.h: Add rather bad hacks to the header files to allow compilation
+
 	* Makefile.am: Distribute libart-config.in
 
 2000-01-09  Raph Levien  <raph@gimp.org>
